log
Thu Apr 21 15:38:39 UTC 2022: 
 tests:  1|8
total_score: 0/70
b55dd62
Thu Apr 21 15:43:05 UTC 2022: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:33: error: implicit declaration of function ‘size_of’ [-Werror=implicit-function-declaration]
   TreeMap* map=(TreeMap*)malloc(size_of(TreeMap));
                                 ^~~~~~~
treemap.c:41:41: error: expected expression before ‘TreeMap’
   TreeMap* map=(TreeMap*)malloc(size_of(TreeMap));
                                         ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e89c4ca
Thu Apr 21 15:43:28 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeNode’:
treemap.c:30:41: error: implicit declaration of function ‘size_of’ [-Werror=implicit-function-declaration]
     TreeNode * new = (TreeNode *)malloc(size_of(TreeNode));
                                         ^~~~~~~
treemap.c:30:49: error: expected expression before ‘TreeNode’
     TreeNode * new = (TreeNode *)malloc(size_of(TreeNode));
                                                 ^~~~~~~~
treemap.c: In function ‘createTreeMap’:
treemap.c:41:41: error: expected expression before ‘TreeMap’
   TreeMap* map=(TreeMap*)malloc(size_of(TreeMap));
                                         ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f222d65
Thu Apr 21 15:43:40 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|8
total_score: 0/70
6263907
Thu Apr 21 15:44:37 UTC 2022: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
a4c7273
Thu Apr 21 15:51:23 UTC 2022: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:75:16: error: ‘Tree’ undeclared (first use in this function); did you mean ‘tree’?
   TreeNode aux=Tree->root
                ^~~~
                tree
treemap.c:75:16: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:76:3: error: expected ‘,’ or ‘;’ before ‘while’
   while(aux!=NULL){
   ^~~~~
treemap.c:75:12: error: unused variable ‘aux’ [-Werror=unused-variable]
   TreeNode aux=Tree->root
            ^~~
cc1: all warnings being treated as errors
Compilation failed
028d9cf
Thu Apr 21 15:51:38 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:75:16: error: invalid initializer
   TreeNode aux=tree->root
                ^~~~
treemap.c:76:3: error: expected ‘,’ or ‘;’ before ‘while’
   while(aux!=NULL){
   ^~~~~
treemap.c:75:12: error: unused variable ‘aux’ [-Werror=unused-variable]
   TreeNode aux=tree->root
            ^~~
cc1: all warnings being treated as errors
Compilation failed
64a1447
Thu Apr 21 15:51:54 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:75:16: error: invalid initializer
   TreeNode aux=tree->root;
                ^~~~
treemap.c:76:12: error: invalid operands to binary != (have ‘TreeNode {aka struct TreeNode}’ and ‘void *’)
   while(aux!=NULL){
            ^~
treemap.c:77:8: error: implicit declaration of function ‘lower_than’ [-Werror=implicit-function-declaration]
     if(lower_than(key,aux->pair->key)){
        ^~~~~~~~~~
treemap.c:77:26: error: invalid type argument of ‘->’ (have ‘TreeNode {aka struct TreeNode}’)
     if(lower_than(key,aux->pair->key)){
                          ^~
treemap.c:78:10: error: invalid type argument of ‘->’ (have ‘TreeNode {aka struct TreeNode}’)
       aux->left;
          ^~
treemap.c:79:32: error: invalid type argument of ‘->’ (have ‘TreeNode {aka struct TreeNode}’)
     }else if(lower_than(key,aux->pair->key)){
                                ^~
treemap.c:80:10: error: invalid type argument of ‘->’ (have ‘TreeNode {aka struct TreeNode}’)
       aux->right;
          ^~
treemap.c:82:17: error: invalid type argument of ‘->’ (have ‘TreeNode {aka struct TreeNode}’)
       return aux->pair;
                 ^~
cc1: all warnings being treated as errors
Compilation failed
4acb4f8
Thu Apr 21 15:52:45 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:77:8: error: implicit declaration of function ‘lower_than’ [-Werror=implicit-function-declaration]
     if(lower_than(key,aux->pair->key)){
        ^~~~~~~~~~
treemap.c:78:10: error: statement with no effect [-Werror=unused-value]
       aux->left;
       ~~~^~~~~~
treemap.c:80:10: error: statement with no effect [-Werror=unused-value]
       aux->right;
       ~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a1b225e
Thu Apr 21 15:53:20 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:78:10: error: statement with no effect [-Werror=unused-value]
       aux->left;
       ~~~^~~~~~
treemap.c:80:10: error: statement with no effect [-Werror=unused-value]
       aux->right;
       ~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1d3fe80
Thu Apr 21 15:54:55 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:78:10: error: ‘aux’ is a pointer; did you mean to use ‘->’?
       aux.left;
          ^
          ->
treemap.c:80:10: error: ‘aux’ is a pointer; did you mean to use ‘->’?
       aux.right;
          ^
          ->
Compilation failed
26e1337
